--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,12 @@
     "persistent": false
   },
   "web_accessible_resources":[
-    "image/Picture1.png"
+    "image/Picture1.png",
+    "image/notebg.png"
   ],
+  "web_accessible_resources":[
+     "font/Comic Sans MS.ttf"
+],
   "page_action": {
     "default_icon": "icons/icon19.png",
     "default_title": "page action demo",
