--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
   },
   "web_accessible_resources":[
     "image/Picture1.png",
-    "image/notebg.png"
+    "image/notebg.png",
+    "image/pp.png"
   ],
   "web_accessible_resources":[
      "font/Comic Sans MS.ttf"
