--- a/manifest.json
+++ b/manifest.json
@@ -17,11 +17,9 @@
   "web_accessible_resources":[
     "image/Picture1.png",
     "image/notebg.png",
-    "image/pp.png"
-  ],
-  "web_accessible_resources":[
+    "image/pp.png",
      "font/Comic Sans MS.ttf"
-],
+  ],
   "page_action": {
     "default_icon": "icons/icon19.png",
     "default_title": "page action demo",
@@ -30,8 +28,9 @@
   "chrome_url_overrides": {
     "newtab": "src/override/override.html"
   },
-  "content_scripts":{
-    "css": "css/pfold.css",
-    "js": "js/sketch.js"
-  }
+  "content_scripts":[{
+    "matches": ["<all_urls>"],
+    "css": ["css/pfold.css"],
+    "js": ["js/sketch.js"]
+  }]
 }
